update something new

--- a/src/app/auth/password-reset/password-reset.component.html
+++ b/src/app/auth/password-reset/password-reset.component.html
@@ -15,139 +15,165 @@
     <div
       class="w-full max-w-md md:bg-white md:px-8 md:pb-14 md:pt-10 md:rounded-md md:shadow-base"
     >
-      <div class="flex flex-col gap-3 text-center">
-        <div class="font-semibold text-gray-900 text-2xl capitalize">
-          {{ "PasswordReset.Title" | translate }}
+      <ng-container *ngIf="!isChanged">
+        <div class="flex flex-col gap-3 text-center">
+          <div class="font-semibold text-gray-900 text-2xl capitalize">
+            {{ "PasswordReset.Title" | translate }}
+          </div>
+          <div class="text-gray-600">
+            {{ "PasswordReset.SubTitle" | translate }}
+          </div>
         </div>
-        <div class="text-gray-600">
-          {{ "PasswordReset.SubTitle" | translate }}
-        </div>
-      </div>
 
-      <form
-        class="mt-8"
-        [formGroup]="passwordResetForm"
-        (ngSubmit)="submit()"
-        #passwordResetNgForm="ngForm"
-      >
-        <mat-form-field appearance="fill" class="w-full">
-          <mat-label>{{ "PasswordReset.Password" | translate }}</mat-label>
-          <input
-            matInput
-            type="password"
-            formControlName="password"
-            #passwordField
-          />
-          <button
-            mat-icon-button
-            type="button"
-            (click)="
-              passwordField.type === 'password'
-                ? (passwordField.type = 'text')
-                : (passwordField.type = 'password')
-            "
-            matSuffix
-          >
-            <mat-icon
-              class="icon-size-5"
-              *ngIf="passwordField.type === 'password'"
-              [svgIcon]="'mat_outline:visibility'"
-            ></mat-icon>
-            <mat-icon
-              class="icon-size-5"
-              *ngIf="passwordField.type === 'text'"
-              [svgIcon]="'mat_outline:visibility_off'"
-            ></mat-icon>
-          </button>
-          <mat-error
-            *ngIf="passwordResetForm.get('password')?.hasError('required')"
-          >
-            {{ "Errors.Required" | translate }}
-          </mat-error>
-          <mat-error
-            *ngIf="passwordResetForm.get('password')?.hasError('minlength')"
-          >
-            {{
-              "Errors.MinLength"
-                | translate
-                  : {
-                      control: ("PasswordReset.Password" | translate),
-                      length: "6"
-                    }
-            }}
-          </mat-error>
-        </mat-form-field>
-        <mat-form-field appearance="fill" class="w-full">
-          <mat-label>{{
-            "PasswordReset.ConfirmPassword" | translate
-          }}</mat-label>
-          <input
-            matInput
-            type="password"
-            formControlName="confirmPassword"
-            #confirmPasswordField
-          />
-          <button
-            mat-icon-button
-            type="button"
-            (click)="
-              confirmPasswordField.type === 'password'
-                ? (confirmPasswordField.type = 'text')
-                : (confirmPasswordField.type = 'password')
-            "
-            matSuffix
-          >
-            <mat-icon
-              class="icon-size-5"
-              *ngIf="confirmPasswordField.type === 'password'"
-              [svgIcon]="'mat_outline:visibility'"
-            ></mat-icon>
-            <mat-icon
-              class="icon-size-5"
-              *ngIf="confirmPasswordField.type === 'text'"
-              [svgIcon]="'mat_outline:visibility_off'"
-            ></mat-icon>
-          </button>
-          <mat-error
-            *ngIf="
-              passwordResetForm.get('confirmPassword')?.hasError('required')
-            "
-          >
-            {{ "Errors.Required" | translate }}
-          </mat-error>
-          <mat-error
-            *ngIf="
-              passwordResetForm.get('confirmPassword')?.hasError('mustMatch')
-            "
-          >
-            {{
-              "Errors.MustMatch"
-                | translate
-                  : {
-                      control: ("PasswordReset.Password" | translate),
-                      matchingControl:
-                        ("PasswordReset.ConfirmPassword" | translate)
-                    }
-            }}
-          </mat-error>
-        </mat-form-field>
-        <button
-          class="w-full !mt-6 btn--lg"
-          mat-flat-button
-          [color]="'primary'"
-          [disabled]="passwordResetForm.disabled"
+        <form
+          class="mt-8"
+          [formGroup]="passwordResetForm"
+          (ngSubmit)="submit()"
+          #passwordResetNgForm="ngForm"
         >
-          <span *ngIf="!passwordResetForm.disabled">
-            {{ "Actions.Continue" | translate }}
-          </span>
-          <mat-progress-spinner
-            *ngIf="passwordResetForm.disabled"
-            [diameter]="24"
-            mode="indeterminate"
+          <mat-form-field appearance="fill" class="w-full">
+            <mat-label>{{ "PasswordReset.Password" | translate }}</mat-label>
+            <input
+              matInput
+              type="password"
+              formControlName="password"
+              #passwordField
+            />
+            <button
+              mat-icon-button
+              type="button"
+              (click)="
+                passwordField.type === 'password'
+                  ? (passwordField.type = 'text')
+                  : (passwordField.type = 'password')
+              "
+              matSuffix
+            >
+              <mat-icon
+                class="icon-size-5"
+                *ngIf="passwordField.type === 'password'"
+                [svgIcon]="'mat_outline:visibility'"
+              ></mat-icon>
+              <mat-icon
+                class="icon-size-5"
+                *ngIf="passwordField.type === 'text'"
+                [svgIcon]="'mat_outline:visibility_off'"
+              ></mat-icon>
+            </button>
+            <mat-error
+              *ngIf="passwordResetForm.get('password')?.hasError('required')"
+            >
+              {{ "Errors.Required" | translate }}
+            </mat-error>
+            <mat-error
+              *ngIf="passwordResetForm.get('password')?.hasError('minlength')"
+            >
+              {{
+                "Errors.MinLength"
+                  | translate
+                    : {
+                        control: ("PasswordReset.Password" | translate),
+                        length: "6"
+                      }
+              }}
+            </mat-error>
+          </mat-form-field>
+          <mat-form-field appearance="fill" class="w-full">
+            <mat-label>{{
+              "PasswordReset.ConfirmPassword" | translate
+            }}</mat-label>
+            <input
+              matInput
+              type="password"
+              formControlName="confirmPassword"
+              #confirmPasswordField
+            />
+            <button
+              mat-icon-button
+              type="button"
+              (click)="
+                confirmPasswordField.type === 'password'
+                  ? (confirmPasswordField.type = 'text')
+                  : (confirmPasswordField.type = 'password')
+              "
+              matSuffix
+            >
+              <mat-icon
+                class="icon-size-5"
+                *ngIf="confirmPasswordField.type === 'password'"
+                [svgIcon]="'mat_outline:visibility'"
+              ></mat-icon>
+              <mat-icon
+                class="icon-size-5"
+                *ngIf="confirmPasswordField.type === 'text'"
+                [svgIcon]="'mat_outline:visibility_off'"
+              ></mat-icon>
+            </button>
+            <mat-error
+              *ngIf="
+                passwordResetForm.get('confirmPassword')?.hasError('required')
+              "
+            >
+              {{ "Errors.Required" | translate }}
+            </mat-error>
+            <mat-error
+              *ngIf="
+                passwordResetForm.get('confirmPassword')?.hasError('mustMatch')
+              "
+            >
+              {{
+                "Errors.MustMatch"
+                  | translate
+                    : {
+                        control: ("PasswordReset.Password" | translate),
+                        matchingControl:
+                          ("PasswordReset.ConfirmPassword" | translate)
+                      }
+              }}
+            </mat-error>
+          </mat-form-field>
+          <button
+            class="w-full !mt-6 btn--lg"
+            mat-flat-button
+            [color]="'primary'"
+            [disabled]="passwordResetForm.disabled"
           >
-          </mat-progress-spinner>
-        </button>
-      </form>
+            <span *ngIf="!passwordResetForm.disabled">
+              {{ "Actions.Continue" | translate }}
+            </span>
+            <mat-progress-spinner
+              *ngIf="passwordResetForm.disabled"
+              [diameter]="24"
+              mode="indeterminate"
+            >
+            </mat-progress-spinner>
+          </button>
+        </form>
+      </ng-container>
+
+      <ng-container *ngIf="isChanged">
+        <div class="flex flex-col gap-3 items-center text-center">
+          <mat-icon
+            class="icon-size-18 text-success"
+            svgIcon="mat_outline:check_circle"
+          ></mat-icon>
+          <div class="font-semibold text-xl text-gray-900">
+            {{ "PasswordReset.ChangedPasswordSuccessfully" | translate }}
+          </div>
+          <div class="text-gray-500 text-lg">
+            {{ "PasswordReset.GoLoginWithNewPassword" | translate }}
+          </div>
+          <button
+            type="button"
+            class="w-full !mt-6 btn--lg"
+            mat-flat-button
+            [color]="'primary'"
+            routerLink="/login"
+          >
+            {{ "Actions.Login" | translate }}
+          </button>
+        </div>
+      </ng-container>
     </div>
   </div>
   <div class="mt-auto text-gray-400 text-sm text-center py-4">
