Update something new

--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -49,7 +49,7 @@
         }}</alert>
         <mat-form-field appearance="fill" class="w-full">
           <mat-label>Email</mat-label>
-          <input matInput formControlName="email" #email />
+          <input matInput name="email" formControlName="email" #email />
           <mat-error
             *ngIf="forgotPasswordForm.get('email')?.hasError('required')"
             >{{ "Errors.Required" | translate }}</mat-error
