update something new

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -114,7 +114,7 @@
       </form>
     </div>
   </div>
-  <div class="mt-auto text-gray-400 text-sm text-center py-4">
+  <div class="mt-auto text-gray-400 text-sm text-center pt-4 pb-3">
     &copy; 2022 Vietspeak. All rights reserved.
   </div>
 </div>
