--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -5,7 +5,7 @@
     <div class="flex justify-between items-center gap-4 w-full py-4 h-16">
       <div class="flex items-center gap-2">
         <a
-          class="font-bold text-gray-900 text-xl hover:no-underline"
+          class="font-semibold text-gray-900 text-xl hover:no-underline"
           routerLink="/"
           >Vietspeak</a
         >
@@ -27,7 +27,7 @@
       </div>
     </div>
     <div
-      class="w-full max-w-md md:bg-white md:px-8 md:pb-14 md:pt-10 md:rounded-md md:shadow-base"
+      class="w-full max-w-md md:bg-white md:px-8 md:pb-14 md:pt-10 md:rounded-md"
     >
       <div class="font-semibold text-gray-900 text-2xl text-center capitalize">
         {{ "Login.Title" | translate }}
