--- a/src/app/modules/onboarding/account-type/account-type.component.html
+++ b/src/app/modules/onboarding/account-type/account-type.component.html
@@ -4,7 +4,7 @@
   <div class="w-full max-w-7xl flex flex-col gap-6 items-center justify-start">
     <div class="flex justify-between items-center gap-4 w-full py-4 h-16">
       <div class="flex items-center gap-2">
-        <div class="font-bold text-gray-900 text-xl">Vietspeak</div>
+        <div class="font-semibold text-gray-900 text-xl">Vietspeak</div>
         <app-languages></app-languages>
       </div>
 
