--- a/src/app/modules/onboarding/congratulations/congratulations.component.html
+++ b/src/app/modules/onboarding/congratulations/congratulations.component.html
@@ -2,7 +2,7 @@
   class="w-full min-h-full flex flex-col gap-6 items-center bg-gray-50 relative px-4 justify-center"
 >
   <div
-    class="w-full max-w-sm md:bg-white md:px-8 md:py-14 md:rounded-md md:shadow-base"
+    class="w-full max-w-sm md:bg-white md:px-8 md:py-14 md:rounded-md"
   >
     <div class="flex flex-col gap-3 justify-center items-center">
       <mat-icon
