--- a/src/app/modules/onboarding/tutor-info/tutor-info.component.html
+++ b/src/app/modules/onboarding/tutor-info/tutor-info.component.html
@@ -42,6 +42,7 @@
         labelPosition="bottom"
         [linear]="true"
         animationDuration="0"
+        (selectionChange)="onStepChanged()"
       >
         <ng-template matStepperIcon="edit">
           <mat-icon class="text-white" svgIcon="mat_outline:edit"></mat-icon>
@@ -57,7 +58,11 @@
             <div class="flex justify-center -mx-6 sm:px-6">
               <div class="w-full mt-4">
                 <form [formGroup]="tutorBasicInfoForm">
-                  <mat-form-field appearance="fill" class="w-full">
+                  <mat-form-field
+                    appearance="fill"
+                    class="w-full"
+                    floatLabel="always"
+                  >
                     <mat-label>{{
                       "TutorInfo.LanguageWantToTeach" | translate
                     }}</mat-label>
@@ -72,11 +77,11 @@
                               class="w-full object-cover"
                               [src]="
                                 this.tutorBasicInfoForm.get('teachingLanguage')
-                                  ?.value.imgUrl
+                                  ?.value?.imgUrl
                               "
                               [attr.alt]="
                                 this.tutorBasicInfoForm.get('teachingLanguage')
-                                  ?.value.label
+                                  ?.value?.label
                               "
                             />
                           </div>
@@ -84,7 +89,7 @@
                           <div>
                             {{
                               this.tutorBasicInfoForm.get("teachingLanguage")
-                                ?.value.label
+                                ?.value?.label
                             }}
                           </div>
                         </div>
@@ -212,7 +217,7 @@
                     <mat-datepicker #picker></mat-datepicker>
                   </mat-form-field>
 
-                  <div class="mt-4 flex justify-center">
+                  <div class="mt-6 flex justify-center">
                     <button
                       type="submit"
                       class="btn btn--lg w-full"
@@ -260,8 +265,113 @@
                       >{{ "Errors.Required" | translate }}</mat-error
                     >
                   </mat-form-field>
+                  <div class="flex flex-col mb-4">
+                    <div
+                      class="text-gray-500 font-medium flex gap-1 items-center mb-2"
+                    >
+                      {{ "TutorInfo.LanguagesYouSpeak" | translate }}
+                    </div>
+                    <div formArrayName="languages" class="flex flex-col gap-3">
+                      <div
+                        *ngFor="
+                          let language of languagesFormArray.controls;
+                          let i = index
+                        "
+                        class="flex items-center flex-wrap md:flex-nowrap gap-x-3 rounded border-2 border-solid px-3 py-2 bg-white relative"
+                        [formGroupName]="i"
+                      >
+                        <div class="flex-grow">
+                          <mat-form-field
+                            appearance="fill"
+                            class="w-full"
+                            floatLabel="always"
+                          >
+                            <mat-label>
+                              {{ "TutorInfo.Language" | translate }}
+                            </mat-label>
+                            <mat-select
+                              placeholder="{{ 'Actions.Select' | translate }}"
+                              formControlName="language"
+                            >
+                              <mat-option
+                                *ngFor="let item of languageOptions"
+                                [value]="item.value"
+                              >
+                                {{ item.translateKey | translate }}
+                              </mat-option>
+                            </mat-select>
+                            <mat-error
+                              *ngIf="
+                                languagesFormArray
+                                  .at(i)
+                                  .get('language')
+                                  ?.hasError('required')
+                              "
+                              >{{ "Errors.Required" | translate }}</mat-error
+                            >
+                          </mat-form-field>
+                        </div>
+                        <div class="flex-grow">
+                          <mat-form-field
+                            appearance="fill"
+                            class="w-full"
+                            floatLabel="always"
+                          >
+                            <mat-label>
+                              {{ "TutorInfo.Fluency" | translate }}
+                            </mat-label>
+                            <mat-select
+                              placeholder="{{ 'Actions.Select' | translate }}"
+                              formControlName="fluency"
+                            >
+                              <mat-option
+                                *ngFor="let item of fluencyOptions"
+                                [value]="item.value"
+                              >
+                                {{ item.translateKey | translate }}
+                              </mat-option>
+                            </mat-select>
+                            <mat-error
+                              *ngIf="
+                                languagesFormArray
+                                  .at(i)
+                                  .get('fluency')
+                                  ?.hasError('required')
+                              "
+                              >{{ "Errors.Required" | translate }}</mat-error
+                            >
+                          </mat-form-field>
+                        </div>
 
-                  <div class="flex flex-col mb-6">
+                        <div
+                          class="mt-3"
+                          *ngIf="
+                            languagesFormArray.controls.length > 1 && i > 0
+                          "
+                        >
+                          <button
+                            mat-icon-button
+                            type="button"
+                            class="btn btn--sm"
+                            (click)="removeLanguage(i)"
+                          >
+                            <mat-icon
+                              class="text-danger"
+                              svgIcon="mat_outline:clear"
+                            ></mat-icon>
+                          </button>
+                        </div>
+                      </div>
+
+                      <div class="flex justify-end">
+                        <a class="cursor-pointer" (click)="addLanguage()">
+                          {{ "TutorInfo.AddLanguage" | translate }}</a
+                        >
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="flex flex-col mb-4">
                     <div
                       class="text-gray-500 font-medium flex gap-1 items-center mb-2"
                     >
@@ -322,7 +432,7 @@
                         "
                       >
                         <div
-                          class="bg-white rounded flex gap-4 items-center px-4 py-2 border-2"
+                          class="bg-white rounded flex gap-4 items-center px-3 py-2 border-2"
                           *ngFor="
                             let file of this.tutorExperienceForm.get(
                               'teachingCertificates'
@@ -336,7 +446,7 @@
                             >
                               {{ file.name }}
                             </div>
-                            <div class="text-gray-400">
+                            <div class="text-gray-400 text-sm">
                               {{ file.size / 1024 | number : "1.2" }} KB
                             </div>
                           </div>
