--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -12,11 +12,11 @@
         <app-languages></app-languages>
       </div>
       <div class="flex items-center gap-2">
-        <div class="text-gray-400">
+        <div class="text-gray-400 hidden md:inline-block">
           {{ "Register.AlreadyHaveAccount" | translate }}?
         </div>
         <button
-          class="btn--sm"
+          class="btn--sm flex-shrink-0"
           mat-flat-button
           [color]="'primary'"
           routerLink="/login"
