--- a/src/app/modules/client/onboarding/account-type/account-type.component.html
+++ b/src/app/modules/client/onboarding/account-type/account-type.component.html
@@ -57,7 +57,7 @@
           mat-flat-button
           [color]="'primary'"
           (click)="continue()"
-          [disabled]="accountTypeForm.disabled"
+          [disabled]="accountTypeForm.disabled || accountTypeForm.invalid"
         >
           <span *ngIf="!accountTypeForm.disabled">
             {{ "Actions.Continue" | translate }}
