--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -5,11 +5,11 @@
     <div class="flex justify-between items-center gap-4 w-full py-4 h-16">
       <div class="flex items-center gap-2">
         <a
-          class="font-semibold text-gray-900 text-xl hover:no-underline"
+          class="font-semibold text-gray-900 text-xl hover:no-underline cursor-pointer select-none"
           routerLink="/"
           >Vietspeak</a
         >
-        <app-languages></app-languages>
+        <languages></languages>
       </div>
 
       <div class="flex items-center gap-2">
