--- a/src/material/_material-customs.scss
+++ b/src/material/_material-customs.scss
@@ -454,7 +454,7 @@
 /*  @ Menu
 /* ----------------------------------------------------------------------------------------------------- */
 .mat-menu-panel {
-  @apply shadow-md #{'!important'};
+  @apply shadow-base #{'!important'};
 }
 
 /* ----------------------------------------------------------------------------------------------------- */
@@ -663,6 +663,16 @@
     width: 32px;
     min-width: 32px;
     max-width: 32px;
+    height: 32px;
+    min-height: 32px;
+  }
+
+  &.btn--lg {
+    width: 50px;
+    min-width: 50px;
+    max-width: 50px;
+    height: 50px;
+    min-height: 50px;
   }
 }
 
@@ -675,7 +685,7 @@
 }
 
 .mat-datepicker-content {
-  @apply shadow-md #{'!important'};
+  @apply shadow-base #{'!important'};
 }
 
 /* Hover and active cell content background opacity */
